--- a/page-documents.html
+++ b/page-documents.html
@@ -86,7 +86,7 @@
                                                         <div class="bg-primary w--5"></div>
                                                     </div>
                                                     <div class="col">
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
+                                                        <h4 class="h5"><a class="link-primary text-decoration-none" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
                                                         <p class="mb-2">Etiam ornare purus ac ligula aliquam, quis rhoncus neque sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus bibendum euismod erat, ac rhoncus dui placerat quis. Pellentesque non dapibus metus. Donec at porta neque. Aliquam nulla ante, elementum at sem non, rhoncus molestie augue.<br></p>
                                                         <div class="table-responsive small">
                                                             <table class="table table-sm mb-0">
@@ -125,7 +125,7 @@
                                                         <div class="bg-primary w--5"></div>
                                                     </div>
                                                     <div class="col">
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
+                                                        <h4 class="h5"><a class="link-primary text-decoration-none" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
                                                         <p class="mb-2">Etiam ornare purus ac ligula aliquam, quis rhoncus neque sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus bibendum euismod erat, ac rhoncus dui placerat quis. Pellentesque non dapibus metus. Donec at porta neque. Aliquam nulla ante, elementum at sem non, rhoncus molestie augue.<br></p>
                                                         <div class="table-responsive small">
                                                             <table class="table table-sm mb-0">
@@ -164,7 +164,7 @@
                                                         <div class="bg-primary w--5"></div>
                                                     </div>
                                                     <div class="col">
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
+                                                        <h4 class="h5"><a class="link-primary text-decoration-none" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
                                                         <p class="mb-2">Etiam ornare purus ac ligula aliquam, quis rhoncus neque sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus bibendum euismod erat, ac rhoncus dui placerat quis. Pellentesque non dapibus metus. Donec at porta neque. Aliquam nulla ante, elementum at sem non, rhoncus molestie augue.<br></p>
                                                         <div class="table-responsive small">
                                                             <table class="table table-sm mb-0">
@@ -203,7 +203,7 @@
                                                         <div class="bg-primary w--5"></div>
                                                     </div>
                                                     <div class="col">
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
+                                                        <h4 class="h5"><a class="link-primary text-decoration-none" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
                                                         <p class="mb-2">Etiam ornare purus ac ligula aliquam, quis rhoncus neque sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus bibendum euismod erat, ac rhoncus dui placerat quis. Pellentesque non dapibus metus. Donec at porta neque. Aliquam nulla ante, elementum at sem non, rhoncus molestie augue.<br></p>
                                                         <div class="table-responsive small">
                                                             <table class="table table-sm mb-0">
@@ -242,7 +242,7 @@
                                                         <div class="bg-primary w--5"></div>
                                                     </div>
                                                     <div class="col">
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
+                                                        <h4 class="h5"><a class="link-primary text-decoration-none" href="#!">Ustawa Lorem Ipsum z dn. 01.01.2022</a></h4>
                                                         <p class="mb-2">Etiam ornare purus ac ligula aliquam, quis rhoncus neque sagittis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus bibendum euismod erat, ac rhoncus dui placerat quis. Pellentesque non dapibus metus. Donec at porta neque. Aliquam nulla ante, elementum at sem non, rhoncus molestie augue.<br></p>
                                                         <div class="table-responsive small">
                                                             <table class="table table-sm mb-0">
@@ -422,7 +422,7 @@
     <script src="assets/js/custom/libs/jquery.fancybox.js?h=b63c7cca1b5e4bd57bd854c444b895c9"></script>
     <script src="assets/js/custom/libs/flickity.pkgd.min.js?h=8625a9d2a4f797e756dbd299c2d74fc2"></script>
     <script src="assets/js/custom/libs/masonry.pkgd.js?h=c39480835cf00844e6407f24d8aaba2e"></script>
-    <script src="assets/js/custom/libs/triggers/flickity.js?h=ce5e4cba7cab6777b77fafcd72f253e3"></script>
+    <script src="assets/js/custom/libs/triggers/flickity.js?h=331aaa73432bf4132110be0e7fd109fc"></script>
     <script src="assets/js/custom/libs/triggers/masonry.js?h=eba9bf4e2d9c7c9794b7bf1e788e5932"></script>
 </body>
 
