--- a/page-news.html
+++ b/page-news.html
@@ -83,13 +83,13 @@
                                             <div class="card-body p-0">
                                                 <div class="row">
                                                     <div class="col-auto d-flex">
-                                                        <div class="bg-primary w--5"></div>
+                                                        <div class="bg-info w--5"></div>
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="link-info text-decoration-none" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
+                                                        <div class="mt-3"><a class="btn btn-info btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -100,13 +100,13 @@
                                             <div class="card-body p-0">
                                                 <div class="row">
                                                     <div class="col-auto d-flex">
-                                                        <div class="bg-primary w--5"></div>
+                                                        <div class="bg-info w--5"></div>
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="link-info text-decoration-none" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
+                                                        <div class="mt-3"><a class="btn btn-info btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -117,13 +117,13 @@
                                             <div class="card-body p-0">
                                                 <div class="row">
                                                     <div class="col-auto d-flex">
-                                                        <div class="bg-primary w--5"></div>
+                                                        <div class="bg-info w--5"></div>
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="link-info text-decoration-none" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
+                                                        <div class="mt-3"><a class="btn btn-info btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -134,13 +134,13 @@
                                             <div class="card-body p-0">
                                                 <div class="row">
                                                     <div class="col-auto d-flex">
-                                                        <div class="bg-primary w--5"></div>
+                                                        <div class="bg-info w--5"></div>
                                                     </div>
                                                     <div class="col">
                                                         <p class="mb-2 small">01.01.2022<br></p>
-                                                        <h4 class="h5"><a class="text-decoration-none text-body" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
+                                                        <h4 class="h5"><a class="link-info text-decoration-none" href="page-news-single.html">Duis ultrices faucibus tellus a faucibus</a></h4>
                                                         <p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vel velit facilisis, consectetur dui sed, fermentum velit. Aenean lectus libero, egestas id varius in, tristique non neque. Phasellus ac lacus nisl.<br></p>
-                                                        <div class="mt-3"><a class="btn btn-primary btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
+                                                        <div class="mt-3"><a class="btn btn-info btn-sm" role="button" href="page-news-single.html">Czytaj dalej</a></div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -295,7 +295,7 @@
     <script src="assets/js/custom/libs/jquery.fancybox.js?h=b63c7cca1b5e4bd57bd854c444b895c9"></script>
     <script src="assets/js/custom/libs/flickity.pkgd.min.js?h=8625a9d2a4f797e756dbd299c2d74fc2"></script>
     <script src="assets/js/custom/libs/masonry.pkgd.js?h=c39480835cf00844e6407f24d8aaba2e"></script>
-    <script src="assets/js/custom/libs/triggers/flickity.js?h=ce5e4cba7cab6777b77fafcd72f253e3"></script>
+    <script src="assets/js/custom/libs/triggers/flickity.js?h=331aaa73432bf4132110be0e7fd109fc"></script>
     <script src="assets/js/custom/libs/triggers/masonry.js?h=eba9bf4e2d9c7c9794b7bf1e788e5932"></script>
 </body>
 
